# keyring-demo

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: sampleData.ts
src/lib/components/: HistoryPanel.svelte  HomeScreen.svelte  InfoPanel.svelte  NewEntryButton.svelte  SampleDataButton.svelte  SearchButton.svelte  SelectStoreButtons.svelte  TopBar.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
